Refactoring and optimization changes

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-NEWS_API_KEY=''
-THE_GURDIAN_API_KEY=''
-NEW_YORK_TIMES_KEY=''
+NEWS_API_KEY='6acb6daa1ae641649980df330b572e07'
+GUARDIAN_API_KEY='f12d49ef-b441-41bb-8905-90be3c12b24e'
+NEW_YORK_TIMES_KEY='f2b2hZTOHhG8lqhiQKnQZ54L3aZuacCU'
